Initialized javascript notes:

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Alex Blostein</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -25,7 +26,7 @@
             <h2>Brain Dumps</h2>
             <p>Here's an eclectic collection of random thoughts:</p>
             <ul>
-                <li><a href="link-to-article-1">Javascript Notes: 73 Concepts</a></li>
+                <li><a href="javascript_notes.html">Javascript Notes: 73 Concepts</a></li>
             </ul>
         </section>
     </main>
