--- a/index.html
+++ b/index.html
@@ -3,33 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Alex Blostein - Product Engineer at Miter, with experience at Imprint Payments.">
     <title>Alex Blostein</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Alex Blostein</h1>
-        <div class="contact-info">
-            <p><span class="icon">📧</span><a href="mailto:alexander.blostein@mail.mcgill.ca">alexander.blostein@mail.mcgill.ca</a></p>
-            <p><span class="icon">🔗</span>LinkedIn: <a href="https://www.linkedin.com/in/alexander-blostein/" target="_blank">Alexander Blostein</a></p>
-            <p><span class="icon">📍</span>NYC</p>
-        </div>
+        <address class="contact-info">
+            <p><span class="icon" aria-label="Email">📧</span><a href="mailto:alexander.blostein@mail.mcgill.ca">alexander.blostein@mail.mcgill.ca</a></p>
+            <p><span class="icon" aria-label="LinkedIn">🔗</span>LinkedIn: <a href="https://www.linkedin.com/in/alexander-blostein/" target="_blank" rel="noopener noreferrer">Alexander Blostein</a></p>
+            <p><span class="icon" aria-label="Location">📍</span>NYC</p>
+        </address>
     </header>
     <main>
         <section>
             <h2>Hi!</h2>
             <p>I'm Alex.</p>
+            <p>Currently, working construction at <a href="https://www.miter.com" target="_blank" rel="noopener noreferrer">Miter.</a> Joined the early engineering team, where we're modernizing the construction industry.</p>
+            <p>Previously worked at <a href="https://finance.yahoo.com/news/imprint-raises-75m-series-b-130500677.html" rel="noopener noreferrer">Imprint Payments</a>, where I helped scale the company from Series A to B.</p>
         </section>
         <section>
-            <h2>Brain Dumps</h2>
-            <p>Here's an eclectic collection of random thoughts:</p>
-            <ul>
-                <li><a href="javascript_notes.html">Javascript Notes: 73 Concepts</a></li>
-            </ul>
+            <h2>About Me</h2>
+            <p><strong>My last Amazon order: </strong> <a href="https://www.amazon.com/dp/B08514ZZ8G?ref=ppx_yo2ov_dt_b_fed_asin_title">2 Pyrex bowls.</a>  10/10 recommend.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Alex Blostein</p>
+        <p>&copy; 2024 Alex Blostein. All rights reserved.</p>
     </footer>
 </body>
 </html>
