fixed home page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section>
             <h2>Hi!</h2>
             <p>I'm Alex.</p>
-            <p>Currently, working construction at <a href="https://www.miter.com" target="_blank" rel="noopener noreferrer">Miter.</a> Joined the early engineering team, where we're modernizing the construction industry.</p>
+            <p>Currently, working at <a href="https://www.miter.com" target="_blank" rel="noopener noreferrer">Miter.</a> Joined the early engineering team, where we're modernizing the construction industry.</p>
             <p>Previously worked at <a href="https://finance.yahoo.com/news/imprint-raises-75m-series-b-130500677.html" rel="noopener noreferrer">Imprint Payments</a>, where I helped scale the company from Series A to B.</p>
         </section>
         <section>
