Added more content

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <section>
             <h2>About Me</h2>
             <p><strong>My last Amazon order: </strong> <a href="https://www.amazon.com/dp/B08514ZZ8G?ref=ppx_yo2ov_dt_b_fed_asin_title">2 Pyrex bowls.</a>  10/10 recommend.</p>
+            <p>... more content coming soon</p>
         </section>
     </main>
     <footer>
